--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "redux": "^4.2.0",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.7.0",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
