feat: 엔티티 생성 및 연관관계매핑

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://hamchu-dev.shop:3311/security
+    url: jdbc:mariadb://hamchu-dev.shop:3311/speakon-dev
     username: hamchu
     password: dlgmltn0114
 
