--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -20,6 +20,8 @@ repositories {
 
 dependencies {
     implementation group: 'com.auth0', name: 'java-jwt', version: '4.2.2'
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.14'
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-security', version: '1.6.14'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-security'
