--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -38,7 +38,7 @@ spring:
 
 app:
   oauth2:
-    authorizedRedirectUri: "http://localhost:3000" # 임시
+    authorizedRedirectUri: "http://localhost:3000/auth" # 임시
 
 jwt:
   secret: godheesu
