--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
           kakao:
             client-id: 9fb0d419b0f00382d15ca48e0790d6dc
             client-secret: JQWEMoFIaR7gzISTYouaB8LqVK2O0Bta
-            redirect-uri: http://hamchu-dev.shop:8811/login/oauth2/code/kakao
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
             authorization-grant-type: authorization_code
             client-authentication-method: POST
             client-name: Kakao
