--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -46,8 +46,8 @@ spring:
     broker-url:
 
 file:
-#  dir: C:\test\
-  dir: /usr/app/speakon-dev/
+  dir: C:\test\
+#  dir: /usr/app/speakon-dev/
 
 app:
   oauth2:
