feat: 화상회의 session 상태 관리에 redis 적용 (시작, 종료 추가)

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -69,5 +69,6 @@ openvidu:
 
 logging:
   level:
+    com.alppano.speakon: info
     org.hibernate.SQL: debug
-    org.hibernate.type.descriptor.sql: trace
+#    org.hibernate.type.descriptor.sql: trace
