fix: HttpRequestService 재수정

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -70,5 +70,5 @@ openvidu:
 logging:
   level:
     com.alppano.speakon: info
-    org.hibernate.SQL: debug
+#    org.hibernate.SQL: debug
 #    org.hibernate.type.descriptor.sql: trace
