feat: OpenVidu 녹음파일 등록 기능

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -65,6 +65,8 @@ jwt:
 
 openvidu:
   OPENVIDU_URL: https://i8d107.p.ssafy.io:443/
+  OPENVIDU_RECORDING_PATH: /opt/openvidu/recordings/
+#  OPENVIDU_RECORDING_PATH:  C:\test\recording\
   OPENVIDU_SECRET: MY_SECRET
 
 logging:
