--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM adoptopenjdk/openjdk11
 WORKDIR /usr/app
-COPY build/libs/*.jar speakon-dev_rest-api.jar
-EXPOSE 8811
-CMD ["java", "-jar", "speakon-dev_rest-api.jar"]
+COPY build/libs/*.jar pitichit_rest-api.jar
+EXPOSE 8815
+CMD ["java", "-jar", "pitichit_rest-api.jar"]
